--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -23,6 +23,8 @@
         android:id="@+id/text_view_address"
         android:layout_width="0dp"
         android:layout_height="30dp"
+        android:clickable="true"
+        android:onClick="createMapIntent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="16dp"
@@ -44,6 +46,8 @@
         android:layout_marginTop="16dp"
         android:gravity="center_vertical"
         android:text="(012)345-6789"
+        android:clickable="true"
+        android:onClick="createPhoneIntent"
         android:textColor="?android:attr/actionMenuTextColor"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/text_view_address"
